# mantraglyph

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
api/api/: env.py  secret.py  settings.py  urls.py
api/mantraglyph/: apps.py  models.py  schema.py
api/mantraglyph/core/services/image/: image.py
api/mantraglyph/core/services/mantraglyph/: query.py  type.py
api/mantraglyph/core/services/scant/: tools.py
api/mantraglyph/core/services/scant/color detection/: color_detection.py
api/mantraglyph/core/shared/: mutations.py  queries.py  types.py
api/mantraglyph/core/shared/utils/: variables.py
api/mantraglyph/features/visitor/mantra/: mantra.py
