[tool.poetry]
name = "mantraglyph"
version = "0.0.1"
description = ""
authors = ["AIEAJN <nathanuchia@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.13"
translators = "^5.9.2"
opencv-python-headless = "^4.10.0.84"
google-cloud-translate = "^3.16.0"
django = "^5.1.1"
graphene-django = "^3.2.2"
graphene-luna = "^1.0.0"
google-cloud-vision = "^3.7.4"
django-filter = "^24.3"
django-cors-headers = "^4.4.0"
django-allow-cidr = "^0.7.1"
google-cloud-storage = "^2.18.2"
firebase = "^4.0.1"
firebase-admin = "^6.5.0"
uvicorn = "^0.30.6"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
graphene-django-query-optimizer = "^0.10.1"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"



[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
